# csci-8980-repo

./: Pipfile  README.md  db.py  pyproject.toml  requirements.txt  schema.sql  server.py  token_manager.py
static/css/: style.css
templates/: base.html  debug.html  index.html
